# ezQMMM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  breakQM-MM-noCAP.tcl  ezQMMM2.py  pyproject.toml  ruff_error.txt
.github/workflows/: ci.yml
exampleInputs/: qmmm-neu-input.inp  rem_neu_phen_qmmm.txt
ezqmmm/: __init__.py  __main__.py  boundary.py  cli.py  config.py  elements.py  generator.py  geometry.py  models.py  switching.py  writers.py
tests/: conftest.py  test_boundary.py  test_config.py  test_elements.py  test_ezqmmm.py  test_geometry.py  test_integration.py  test_models.py  test_neutralization.py  test_parity.py  test_switching.py  test_writers.py
